# VITA

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
flare/: eval.py  factory.py  train.py
flare/configs/: default_network.yaml  default_policy.yaml
flare/flow/: consistency_flow_matcher.py  flow_matchers.py  mean_flow_matcher.py
flare/losses/: contrastive_loss.py
flare/models/: attention.py  dists.py  pos_embed.py
flare/policies/: __init__.py  base_policy.py
flare/runners/: __init__.py  policy_evaluator.py  policy_trainer.py
flare/trainers/: __init__.py  policy_trainer.py
gym-av-aloha/: .gitignore  LICENSE  README.md  pyproject.toml
gym-av-aloha/gym_av_aloha/: .gitignore  __init__.py
gym-av-aloha/gym_av_aloha/assets/: aloha.xml  task_peg_insertion.xml
gym-av-aloha/gym_av_aloha/datasets/: __init__.py  av_aloha_dataset.py  multi_av_aloha_dataset.py
gym-av-aloha/gym_av_aloha/env/: robot.py  sim_config.py  sim_env.py
gym-av-aloha/gym_av_aloha/env/tasks/: color_cubes_env.py  cube_transfer_env.py  hook_package_env.py  peg_insertion_env.py  pour_test_tube_env.py  slot_insertion_env.py  thread_needle_env.py
gym-av-aloha/gym_av_aloha/kinematics/: diff_ik.py  grad_ik.py
gym-av-aloha/gym_av_aloha/scripts/: record_sim_episodes.py  teleoperate.py
gym-av-aloha/gym_av_aloha/utils/: dataset_utils.py  transform_utils.py
gym-av-aloha/gym_av_aloha/vr/: dummy_headset.py  headset.py  headset_control.py  headset_utils.py
gym-av-aloha/scripts/: convert.py  convert_lerobot_to_avaloha.py  test.py
gym-av-aloha/scripts/old/: benchmark_datasets.py  create_lerobot_dataset.py  lerobot_to_zarr.ipynb  test_dataset.py  visualize_episodes.py
gym-robomimic/: LICENSE  README.md  pyproject.toml
gym-robomimic/gym_robomimic/: __init__.py  env.py
gym-robomimic/scripts/: .gitignore  convert_to_lerobot.py  download_datasets.py  wrist_camera.ipynb
lerobot/: .gitignore  pyproject.toml
(+46 files in other folders)
